--- a/myolq/src/main/res/layout/activity_login.xml
+++ b/myolq/src/main/res/layout/activity_login.xml
@@ -1,14 +1,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:to="http://schemas.android.com/apk/res/com.personage.myolq"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:gravity="center_horizontal"
+              android:gravity="center"
               android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              tools:context="com.personage.myolq.mvp.view.activity.LoginActivity">
+
+    >
+
+    <EditText
+        android:id="@+id/et_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/prompt_username"
+        android:maxLength="18"
+        android:paddingLeft="@dimen/edit_paddleft"
+        android:textSize="@dimen/text_showsize"
+        />
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/prompt_password"
+        android:maxLength="18"
+        android:paddingLeft="@dimen/edit_paddleft"
+        android:layout_marginTop="10dp"
+        android:textSize="@dimen/text_showsize"
+        android:inputType="textPassword"
+        />
+
+    <com.example.widget.rippleclick.Click_Text
+        android:id="@+id/click_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_padd"
+        to:text="登录"
+        ></com.example.widget.rippleclick.Click_Text>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/tv_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_activity_register"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimary"
+            android:padding="@dimen/text_padd"
+            />
+        <TextView
+            android:id="@+id/tv_forgetpass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_activity_forgetpass"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimary"
+            android:padding="@dimen/text_padd"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
 
 
 </LinearLayout>
