--- a/widget/src/main/res/layout/onclick_layout.xml
+++ b/widget/src/main/res/layout/onclick_layout.xml
@@ -3,14 +3,16 @@
                                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    card_view:cardBackgroundColor="@color/cardview_dark_background"
+                                    card_view:cardBackgroundColor="#3F51B5"
                                     card_view:cardCornerRadius="5dp"
     >
 
-    <TextView
-        android:id="@+id/text"
+    <com.example.widget.rippleclick.RippleButton
+        android:id="@+id/rippleButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        />
+        android:background="#12B7F5"
+        android:text="SEND"
+        android:textColor="@color/white"
+        android:textSize="18dp"/>
 </android.support.v7.widget.CardView>
