--- a/widget/src/main/res/layout/top_title.xml
+++ b/widget/src/main/res/layout/top_title.xml
@@ -2,14 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#006600"
+                android:background="@color/colorPrimary"
     >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#0066ff"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize">
         <ImageView
