--- a/workframe/src/main/res/layout/base_layout.xml
+++ b/workframe/src/main/res/layout/base_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/app_back"
               android:gravity="center_horizontal"
               android:orientation="vertical"
     >
@@ -11,17 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></com.example.widget.Top_Title>
 
-    <ScrollView
+
+    <LinearLayout
+        android:id="@+id/body"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/body"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 </LinearLayout>
