--- a/myolq/src/main/res/layout/app_bar_home_page.xml
+++ b/myolq/src/main/res/layout/app_bar_home_page.xml
@@ -28,6 +28,16 @@
             android:textStyle="bold"
             android:text="首页"
             />
+        <TextView
+            android:id="@+id/add"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:layout_gravity="right|center"
+            />
     </android.support.v7.widget.Toolbar>
     <android.support.v4.view.ViewPager
         android:id="@+id/home_page_vp"
