--- a/myolq/src/main/res/values/colors.xml
+++ b/myolq/src/main/res/values/colors.xml
@@ -8,4 +8,14 @@
     <color name="text_select_true">#30303F9F</color>
 
     <color name="radio_textcolor">#444444</color>
+
+    <color name="base_color_text_black">#3e3e39</color>
+    <color name="base_color_text_gray">#9fa0a0</color>
+    <color name="base_color_text_white">#ffffff</color>
+    <color name="color_line">#dadada</color>
+    <color name="color_1e1e1e">#1e1e1e</color>
+    <color name="color_b4">#b4b4b4</color>
+    <color name="color_emote_divder">#ffa1a1a1</color>
+
+
 </resources>
