--- a/myolq/src/main/res/layout/activity_addition.xml
+++ b/myolq/src/main/res/layout/activity_addition.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:to="http://schemas.android.com/apk/res/com.personage.myolq"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -27,13 +27,13 @@
             android:textSize="18sp" />
 
         <com.example.widget.rippleclick.Click_Text
-            android:id="@+id/btn_search"
+            android:id="@+id/click_search"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:gravity="center"
-            to:text="搜索"
-            to:textSize="14sp" />
+            android:layout_height="39dp"
+            android:layout_marginRight="10dp"
+            app:text="搜索"
+            />
+
     </LinearLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
