--- a/myolq/src/main/res/layout/activity_user_info.xml
+++ b/myolq/src/main/res/layout/activity_user_info.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:to="http://schemas.android.com/apk/res/com.personage.myolq"
@@ -7,94 +6,130 @@
     android:orientation="vertical"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         >
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="头像"
-            android:textSize="30sp"
+            android:textSize="24sp"
+            android:layout_marginLeft="20dp"
             android:textColor="@color/radio_textcolor"
-            android:gravity="center"
+            android:id="@+id/textView2"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+        <com.example.widget.CircleImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/main"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp"
             />
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <view
+    </RelativeLayout>
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/radio_textcolor"
-        ></view>
-    <LinearLayout
+        ></View>
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         >
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="账号"
-            android:textSize="30sp"
+            android:textSize="20sp"
+            android:layout_marginLeft="20dp"
             android:textColor="@color/radio_textcolor"
-            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
             />
         <TextView
             android:id="@+id/tv_info_username"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp"
+            android:text="123"
+            android:textSize="18sp"
             />
-    </LinearLayout>
-    <view
+    </RelativeLayout>
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/radio_textcolor"
-        ></view>
-    <LinearLayout
+        ></View>
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         >
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="昵称"
-            android:textSize="30sp"
+            android:textSize="20sp"
+            android:layout_marginLeft="20dp"
             android:textColor="@color/radio_textcolor"
-            android:gravity="center"
-            />
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
         <TextView
             android:id="@+id/tv_info_nickname"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp"
+            android:text="123"
+            android:textSize="18sp"
             />
-    </LinearLayout>
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/radio_textcolor"
+        ></View>
     <com.example.widget.rippleclick.Click_Text
         android:id="@+id/click_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_padd"
         to:text="添加好友"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="@dimen/text_padd"
+        android:layout_marginRight="@dimen/text_padd"
         ></com.example.widget.rippleclick.Click_Text>
     <com.example.widget.rippleclick.Click_Text
         android:id="@+id/click_chat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_padd"
         to:text="聊天"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="@dimen/text_padd"
+        android:layout_marginRight="@dimen/text_padd"
         ></com.example.widget.rippleclick.Click_Text>
 
 </LinearLayout>
