--- a/myolq/src/main/res/values/dimens.xml
+++ b/myolq/src/main/res/values/dimens.xml
@@ -9,4 +9,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="text_size_medium">16sp</dimen>
+
+    <dimen name="margin_3">3dp</dimen>
+    <dimen name="margin_5">5dp</dimen>
+    <dimen name="margin_10">10dp</dimen>
+    <dimen name="height_40">40dip</dimen>
 </resources>
