--- a/myolq/src/main/res/layout/activity_home_page.xml
+++ b/myolq/src/main/res/layout/activity_home_page.xml
@@ -18,7 +18,7 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
+        android:layout_gravity="left"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home_page"
         app:menu="@menu/activity_home_page_drawer"/>
