--- a/myolq/src/main/res/layout/activity_login.xml
+++ b/myolq/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:to="http://schemas.android.com/apk/res/com.personage.myolq"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_padd"
-        to:text="登录"
+        app:text="登录"
         ></com.example.widget.rippleclick.Click_Text>
 
     <RelativeLayout
