--- a/myolq/src/main/res/layout/activity_register.xml
+++ b/myolq/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:to="http://schemas.android.com/apk/res/com.personage.myolq"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center_horizontal"
@@ -120,7 +120,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginLeft="@dimen/text_padd"
         android:layout_marginRight="@dimen/text_padd"
-        to:text="确认"
+        app:text="确认"
         >
 
     </com.example.widget.rippleclick.Click_Text>
