--- a/myolq/src/main/res/layout/fragment_friends.xml
+++ b/myolq/src/main/res/layout/fragment_friends.xml
@@ -7,49 +7,88 @@
 
     <com.example.widget.sortlist.ClearEditText
         android:id="@+id/filter_edit"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
         android:background="@drawable/search_bar_edit_selector"
         android:drawableLeft="@drawable/search_bar_icon_normal"
         android:hint="请输入关键字"
         android:singleLine="true"
-        android:textSize="15.0dip"/>
-    <android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/friends_swipe"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        android:textSize="16sp"/>
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+    <!--android:id="@+id/friends_swipe"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+    <!--<FrameLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent">-->
+
+
+
+            <!--<ListView-->
+                <!--android:id="@+id/country_lvcountry"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="fill_parent"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:divider="@null"/>-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/dialog"-->
+                <!--android:layout_width="80.0dip"-->
+                <!--android:layout_height="80.0dip"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:background="@drawable/show_head_toast_bg"-->
+                <!--android:gravity="center"-->
+                <!--android:textColor="#ffffffff"-->
+                <!--android:textSize="30.0dip"-->
+                <!--android:visibility="invisible"/>-->
+
+            <!--<com.example.widget.sortlist.SideBar-->
+                <!--android:id="@+id/sidrbar"-->
+                <!--android:layout_width="30.0dip"-->
+                <!--android:layout_height="fill_parent"-->
+                <!--android:layout_gravity="right|center"/>-->
+    <!--</FrameLayout>-->
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+
+
+
     <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/friends_swipe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
+    <ListView
+    android:id="@+id/country_lvcountry"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center"
+    android:divider="@null"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-            <ListView
-                android:id="@+id/country_lvcountry"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:divider="@null"/>
+    <TextView
+    android:id="@+id/dialog"
+    android:layout_width="80.0dip"
+    android:layout_height="80.0dip"
+    android:layout_gravity="center"
+    android:background="@drawable/show_head_toast_bg"
+    android:gravity="center"
+    android:textColor="#ffffffff"
+    android:textSize="30.0dip"
+    android:visibility="invisible"/>
 
-            <TextView
-                android:id="@+id/dialog"
-                android:layout_width="80.0dip"
-                android:layout_height="80.0dip"
-                android:layout_gravity="center"
-                android:background="@drawable/show_head_toast_bg"
-                android:gravity="center"
-                android:textColor="#ffffffff"
-                android:textSize="30.0dip"
-                android:visibility="invisible"/>
-
-            <com.example.widget.sortlist.SideBar
-                android:id="@+id/sidrbar"
-                android:layout_width="30.0dip"
-                android:layout_height="fill_parent"
-                android:layout_gravity="right|center"/>
+    <com.example.widget.sortlist.SideBar
+    android:id="@+id/sidrbar"
+    android:layout_width="30.0dip"
+    android:layout_height="fill_parent"
+    android:layout_gravity="right|center"/>
 
 
     </FrameLayout>
-    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 </LinearLayout>
